--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.0.0-rc.4
+@version      3.0.0-rc.5
 @license      MIT
 @preprocessor stylus
 
@@ -239,9 +239,10 @@ OM = next_omsg
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 3.0.0-rc.4 — August 12th, 2020'
-        --message: 'The v3 is almost here! Delaying the full-release until ' + \
-                   'next week – see the changelog for more info. '
+        --version: 'Dark-WhatsApp 3.0.0-rc.5 — August 14th, 2020'
+        --message: 'The v3 is almost here! Updated to `v2.2033.7` of ' + \
+                   'WhatsApp. Delaying the full-release until next week ' + \
+                   'or the week after – see the changelog for more info. '
         --changes: '\A\A https://github.com/vednoc/dark-whatsapp'
 
         /// UI font.
