chat: increase minimum width for message bubbles
This tweak will make it so that context menus don't show _outside_ of
message bubble when there is not enough content, or when big emoji size
option is set to small.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2046,6 +2046,9 @@ OM = next_omsg
             } else {
                 { big } { padding-bottom: 0 }
             }
+
+            /// Increase minimum width for message bubbles.
+            > div:nth-child(2) { min-width: 56px }
         }
     }
 
