feat: improve rules for ac4–5 in color generator

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -212,12 +212,12 @@ OM = next_omsg
             '5': darken(FG, f5),
         },
         ac: {
-            '0':                      AC,
+            '0': mix(darken(BG,  0%), AC, 0%),
             '1': mix(darken(BG, 40%), AC, a1),
             '2': mix(darken(BG, 40%), AC, a2),
             '3': mix(darken(BG, 40%), AC, a3),
-            '4': mix(darken(BG, 40%), AC, a4),
-            '5': mix(darken(BG, 40%), AC, a5),
+            '4': mix(darken(BG, 65%), AC, a4),
+            '5': mix(darken(BG, 50%), AC, a5),
         },
         ig: {
             '0':        IM,
